# MGL

./: CMakeLists.txt  README.md
cmake/: embed_shaders.cmake  shader_to_header.cmake
examples/: CMakeLists.txt  compute_shader_example.cpp  conway.cpp  mandelbrot_compute.cpp  test_compute_minimal.cpp
examples/3d/: compute_shader.cpp  fragment_shader.cpp  main.cpp  ray_tracer.cpp  ray_tracer.h  shader_utils.cpp  shader_utils.h  shaders.h  vertex_shader.cpp
examples/elle/: .gitignore  Makefile  README.md  burning_ship  t.err  test_basic
examples/elle/.build-main/: target.ssa
examples/elle/examples/: burning_ship.le  test_basic.le
examples/elle/examples/resources/: burning_ship.fs  burning_ship.fs.backup
examples/elle/raylib/build_clean/: CPackConfig.cmake  CPackSourceConfig.cmake  Makefile
examples/elle/raylib/build_clean/raylib/: Makefile
examples/elle/raylib/build_clean/raylib/include/: rlgl.h
examples/elle/raylib/src/: CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  libraylib.a.backup  rcore.c  rlgl.h  utils.c
examples/elle/raylib/src/examples/: Makefile  audio_mixed_processor  audio_module_playing  audio_music_stream  audio_raw_stream  audio_sound_loading  audio_sound_multi  audio_sound_positioning  audio_stream_effects  core_2d_camera  core_2d_camera_mouse_zoom  core_2d_camera_platformer  core_2d_camera_split_screen  core_3d_camera_first_person  core_3d_camera_fps  core_3d_camera_free  core_3d_camera_mode  core_3d_camera_split_screen  core_3d_picking  core_automation_events  core_basic_screen_manager  core_basic_window  core_clipboard_text  core_custom_frame_control  core_custom_logging  core_delta_time  core_directory_files  core_drop_files  core_high_dpi  core_highdpi_testbed  core_input_actions  core_input_gamepad  core_input_gestures  core_input_gestures_testbed  core_input_keys  core_input_mouse  core_input_mouse_wheel  core_input_multitouch  core_input_virtual_controls  core_monitor_detector  (+153 more)
examples/elle/raylib/src/raylib/: Makefile
examples/elle/src/: main.le
examples/elle/src/lib/: aabb.le  bindings.le  bvh.le  enums.le  index.le
examples/elle/src/scene/: camera.le  index.le  object.le  plane.le  sphere.le  triangle.le
examples/elle/src/shader/: raytracer.glsl
examples/hello_triangle/: hello_colorful_triangle.cpp  shader_triangle.frag  shader_triangle.vert
examples/resources/: burning_ship.fs
glfw/: CMakeLists.txt
glfw/src/: cocoa_init.m  cocoa_joystick.m  cocoa_monitor.m  cocoa_time.c  cocoa_window.m  context.c  egl_context.c  glx_context.c  init.c  input.c  linux_joystick.c  mgl_context.m  monitor.c  nsgl_context.m  null_init.c  null_joystick.c  null_monitor.c  null_window.c  osmesa_context.c  platform.c  posix_module.c  posix_thread.c  posix_time.c  vulkan.c  wgl_context.c  win32_init.c  win32_joystick.c  win32_module.c  win32_monitor.c  win32_thread.c  win32_time.c  win32_window.c  window.c  wl_init.c  wl_monitor.c  wl_window.c  x11_init.c  x11_monitor.c  x11_window.c  xkb_unicode.c
include/: MGLContext.h  glm_context.h
src/: MGLRenderer.m  buffers.c  draw_buffers.c  gl_core.c  gl_core.c.bak  glm_context.c  program.c  rendering.c  shaders.c  state.c  textures.c  uniforms.c  vertex_arrays.c
subprojects/: CMakeLists.txt
test/: gtest_main.cpp
